--- a/server/build.gradle
+++ b/server/build.gradle
@@ -1,8 +1,6 @@
 plugins {
     id 'java'
     id 'war'
-    id 'org.springframework.boot' version '3.0.5'
-    id 'io.spring.dependency-management' version '1.1.0'
 }
 
 group = 'com.example'
@@ -14,9 +12,8 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter-web'
-    providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    implementation 'jakarta.servlet:jakarta.servlet-api:6.0.0'
+    implementation 'org.springframework:spring-webmvc:6.0.4'
 }
 
 tasks.named('test') {
